--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<!-- meta start -->
 	<!-- meta end -->
 
-	<script type="module" src="dist/main.js"></script>
+
 
 	<!-- website start -->
 	<link rel="stylesheet" type="text/css" href="src/website/o3dv/css/icons.css">
@@ -71,4 +71,5 @@
 	</div>
 </body>
 
+<script type="module" src="dist/bundle.js"></script>
 </html>
